# TextProposals

./: .gitignore  CMakeLists.txt  README.md  agglomerative_clustering.cpp  agglomerative_clustering.h  eval_IC03.cpp  eval_IC15.cpp  eval_SVT.cpp  fast_clustering.cpp  image_contour.h  lex.txt  main.cpp  main_cnn.cpp  min_bounding_box.cpp  min_bounding_box.h  nfa.cpp  region.cpp  region.h  stopping_rule.cpp  stopping_rule.h  trained_boost_groups.xml  utils.h  voronoi.h
data/ICDAR2003/SceneTrialTest/: words.xml
data/ICDAR2013/: test_locations.xml  train_locations.xml
data/SVT/: test.xml
evaluation/: README.md  boxesData_ICDAR2013.m  boxesData_SVT.m  boxesEval.m  eval_ICDAR.m  eval_SVT.m  txt2mat_ICDAR.m  txt2mat_SVT.m
evaluation/boxes/: GroundTruth-ICDAR2013-test.mat  GroundTruth-SVT-test.mat
lex/ICDAR2003/: lex_FULL.txt
lex/ICDAR2003/ryoungt_05.08.2002/: PICT0005.JPG_voc.txt  PICT0006.JPG_voc.txt  PICT0007.JPG_voc.txt  PICT0009.JPG_voc.txt  PICT000a1.JPG_voc.txt  PICT0010.JPG_voc.txt  PICT0014.JPG_voc.txt  PICT0015.JPG_voc.txt  PICT0016.JPG_voc.txt  PICT0017.JPG_voc.txt  PICT0018.JPG_voc.txt  PICT0024.JPG_voc.txt  PICT0025.JPG_voc.txt  PICT0026.JPG_voc.txt  PICT0027.JPG_voc.txt  PICT0028.JPG_voc.txt  PICT0029.JPG_voc.txt  PICT0030.JPG_voc.txt  PICT0032.JPG_voc.txt  PICT0034.JPG_voc.txt  PICT0035.JPG_voc.txt  PICT0040.JPG_voc.txt  PICT0045.JPG_voc.txt  PICT0048.JPG_voc.txt  PICT0049.JPG_voc.txt  PICT0050.JPG_voc.txt  PICT0051.JPG_voc.txt  PICTs0003.JPG_voc.txt  PICTs0004.JPG_voc.txt  PICTs0005.JPG_voc.txt  PICTs0006.JPG_voc.txt  PICTs0007.JPG_voc.txt  PICTs0010.JPG_voc.txt  PICTs0011.JPG_voc.txt  PICTs0012.JPG_voc.txt  PICTs0014.JPG_voc.txt  PICTs0015.JPG_voc.txt  PICTs0016.JPG_voc.txt  PICTs0017.JPG_voc.txt  PICTs0020.JPG_voc.txt  (+71 more)
lex/ICDAR2015/: voc_img_1.txt  voc_img_10.txt  voc_img_100.txt  voc_img_101.txt  voc_img_102.txt  voc_img_103.txt  voc_img_104.txt  voc_img_105.txt  voc_img_106.txt  voc_img_107.txt  voc_img_108.txt  voc_img_109.txt  voc_img_11.txt  voc_img_110.txt  voc_img_111.txt  voc_img_112.txt  voc_img_113.txt  voc_img_114.txt  voc_img_115.txt  voc_img_116.txt  voc_img_117.txt  voc_img_118.txt  voc_img_119.txt  voc_img_12.txt  voc_img_120.txt  voc_img_121.txt  voc_img_122.txt  voc_img_123.txt  voc_img_124.txt  voc_img_125.txt  voc_img_126.txt  voc_img_127.txt  voc_img_128.txt  voc_img_129.txt  voc_img_13.txt  voc_img_130.txt  voc_img_131.txt  voc_img_132.txt  voc_img_133.txt  voc_img_134.txt  (+460 more)
(+138 files in other folders)
